--- a/StatRotatePicture_HW2.1.1/Base.lproj/Main.storyboard
+++ b/StatRotatePicture_HW2.1.1/Base.lproj/Main.storyboard
@@ -1,24 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StatRotatePicture_HW2_1_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EmZ-Fp-2f8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zec-Uv-aOz">
+                                <rect key="frame" x="16" y="20" width="343" height="296"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qAh-Cb-QMp">
+                                <rect key="frame" x="16" y="349" width="343" height="298"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cCJ-3g-pGc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cCJ-3g-pGc" firstAttribute="trailing" secondItem="zec-Uv-aOz" secondAttribute="trailing" constant="16" id="0l0-kU-vpg"/>
+                            <constraint firstItem="cCJ-3g-pGc" firstAttribute="bottom" secondItem="qAh-Cb-QMp" secondAttribute="bottom" constant="20" id="5WP-0l-bKI"/>
+                            <constraint firstItem="zec-Uv-aOz" firstAttribute="leading" secondItem="cCJ-3g-pGc" secondAttribute="leading" constant="16" id="6C1-Bk-BKc"/>
+                            <constraint firstItem="cCJ-3g-pGc" firstAttribute="trailing" secondItem="qAh-Cb-QMp" secondAttribute="trailing" constant="16" id="K5A-ho-mn3"/>
+                            <constraint firstItem="zec-Uv-aOz" firstAttribute="top" secondItem="cCJ-3g-pGc" secondAttribute="top" constant="20" id="M8Y-zw-bsz"/>
+                            <constraint firstItem="qAh-Cb-QMp" firstAttribute="leading" secondItem="cCJ-3g-pGc" secondAttribute="leading" constant="16" id="czN-O9-zoi"/>
+                            <constraint firstItem="qAh-Cb-QMp" firstAttribute="top" secondItem="zec-Uv-aOz" secondAttribute="bottom" constant="33" id="jnH-gu-G1z"/>
+                            <constraint firstItem="qAh-Cb-QMp" firstAttribute="height" secondItem="zec-Uv-aOz" secondAttribute="height" multiplier="1.00676" id="uLh-uy-mia"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.399999999999999" y="79.610194902548727"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
